[package]
name = "maketorrent"
version = "0.1.1"
authors = ["Daniel Müller <perlfuchsi@gmail.com>"]
description = "A Bittorrent meta file generator"
license = "GPL-3.0+"
repository = "https://github.com/fuchsi/maketorrent.git"

[dependencies]
bip_metainfo = "0.12"
pbr = "1.0.0"
num_cpus = "1.0"

[dependencies.clap]
version = "2.31"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "color" ]

[patch.crates-io]
bip_metainfo = { path = "bip_metainfo" }

[profile.release]
lto = true
