[package]
name = "maketorrent"
version = "0.1.1"
authors = ["Daniel Müller <perlfuchsi@gmail.com>"]
description = "A Bittorrent meta file generator"
license = "GPL-3.0+"
repository = "https://github.com/fuchsi/maketorrent"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["torrent", "bencode"]

[dependencies]
pbr = "1.0.0"
num_cpus = "1.0"

[dependencies.clap]
version = "2.31"
default-features = false

features = [ "color" ]

[dependencies.bip_metainfo ]
path = "bip_metainfo"
version = "0.12.0"

[profile.release]
lto = true
